--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/stripe-js": "^8.5.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
@@ -19,6 +20,7 @@
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
