--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
     "@stripe/stripe-js": "^8.5.3",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
